--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 :root {
     --background: #393E46;
     --teal: #00ADB5;
-    --light-gray: #EEEEEE;
+    --gray: #EEEEEE;
     --dark-background: #222831;
+    --light-teal: #33c2cc;
+    /* Más claro que #00ADB5 */
+    --light-gray: #f5f5f5;
+    /* Más claro que #EEEEEE */
+    --dark-background-option: #1e262e;
+    /* Más oscuro que #222831 */
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     background-color: var(--background);
     background-size: cover;
     background-position: left;
@@ -14,12 +19,5 @@ body {
     background-attachment: fixed;
     height: 100%;
     margin: 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
-}
-
-.content {
     min-height: calc(100vh - 190px);
 }
