--- a/src/pages/styles/layout.css
+++ b/src/pages/styles/layout.css
@@ -9,7 +9,6 @@
     overflow-y: auto;
 }
 
-
 /* Estilos generales para la barra de desplazamiento */
 ::-webkit-scrollbar {
     width: 12px; /* Ancho de la barra de desplazamiento */
@@ -20,10 +19,10 @@
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #C3FD74; /* Color del pulgar de la barra de desplazamiento */
+    background-color: var(--dark-background); /* Color del pulgar de la barra de desplazamiento */
     border-radius: 6px; /* Bordes redondeados del pulgar */
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #3FEBBD; /* Color del pulgar al pasar el ratón sobre él */
+    background-color: var(--light-gray); /* Color del pulgar al pasar el ratón sobre él */
   }
