--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
 :root {
-    --background: #393E46;
-    --teal: #00ADB5;
+    --background: #14191f;
+    --black: #000;
+    --primary: #393E46;
+    --secondary: #00ADB5;
+    --secondary-light: #33c2cc;
     --gray: #EEEEEE;
-    --dark-background: #222831;
-    --light-teal: #33c2cc;
-    /* Más claro que #00ADB5 */
     --light-gray: #f5f5f5;
-    /* Más claro que #EEEEEE */
-    --dark-background-option: #1e262e;
-    /* Más oscuro que #222831 */
+    --warning: #ff7300;
 }
 
 body {
-    background-color: var(--background);
+    background-color: var(--primary);
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
