--- a/src/pages/styles/layout.css
+++ b/src/pages/styles/layout.css
@@ -19,10 +19,10 @@
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: var(--dark-background); /* Color del pulgar de la barra de desplazamiento */
+    background-color: var(--background); /* Color del pulgar de la barra de desplazamiento */
     border-radius: 6px; /* Bordes redondeados del pulgar */
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--light-gray); /* Color del pulgar al pasar el ratón sobre él */
+    background-color: var(--gray); /* Color del pulgar al pasar el ratón sobre él */
   }
