--- a/src/pages/styles/layout.css
+++ b/src/pages/styles/layout.css
@@ -1,28 +1,35 @@
 .layout-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
-  
-  .content-container {
-    flex: 1;
-    overflow-y: auto;
+
+.content-container {
+  flex: 1;
+  overflow-y: auto;
 }
 
 /* Estilos generales para la barra de desplazamiento */
 ::-webkit-scrollbar {
-    width: 12px; /* Ancho de la barra de desplazamiento */
-  }
-  
-  ::-webkit-scrollbar-track {
-    background-color: none ; /* Color del fondo de la barra de desplazamiento */
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: #2E90A6; /* Color del pulgar de la barra de desplazamiento */
-    border-radius: 6px; /* Bordes redondeados del pulgar */
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: #72E5F2; /* Color del pulgar al pasar el ratón sobre él */
-  }
+  width: 10px;
+  /* Ancho de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-track {
+  background-color: none;
+  /* Color del fondo de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-thumb {
+  /* primary color */
+  background-color: #F48C06;
+  /* Color del pulgar de la barra de desplazamiento */
+  border-radius: 6px;
+  /* Bordes redondeados del pulgar */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /* secondary color */
+  background-color: #FFBA08;
+  /* Color del pulgar al pasar el ratón sobre él */
+}
